--- a/src/main/resources/application.json
+++ b/src/main/resources/application.json
@@ -2,8 +2,8 @@
   "port": 8000,
   "servers": [
     {
-      "name": "www.was1.com",
-      "http_root": "/WEB-INF/was1",
+      "server_name": "www.was1.com",
+      "http_root": "/template/was1",
       "memo": "나중에 servletContext.getResourceAsStream(\"/WEB-INF/myfile\"); 이렇게..",
       "index": "/index.html",
       "403": "/403.html",
@@ -11,8 +11,8 @@
       "500": "/500.html"
     },
     {
-      "name": "www.was2.com",
-      "http_root": "/WEB-INF/was2",
+      "server_name": "www.was2.com",
+      "http_root": "/template/was2",
       "index": "/index.html",
       "403": "/403.html",
       "404": "/404.html",
@@ -23,5 +23,9 @@
       "exe",
       "sh",
       "/.."
-    ]
+    ],
+  "mapper" : {
+    "/Greeting": "Hello",
+    "/super.Greeting": "service.Hello"
+  }
 }
