--- a/src/main/resources/application.json
+++ b/src/main/resources/application.json
@@ -4,19 +4,18 @@
     {
       "server_name": "www.was1.com",
       "http_root": "/template/was1",
-      "memo": "나중에 servletContext.getResourceAsStream(\"/WEB-INF/myfile\"); 이렇게..",
-      "index": "/index.html",
-      "403": "/403.html",
-      "404": "/404.html",
-      "500": "/500.html"
+      "page_index": "/index.html",
+      "page403": "/403.html",
+      "page404": "/404.html",
+      "page500": "/500.html"
     },
     {
       "server_name": "www.was2.com",
       "http_root": "/template/was2",
-      "index": "/index.html",
-      "403": "/403.html",
-      "404": "/404.html",
-      "500": "/500.html"
+      "page_index": "/index.html",
+      "page403": "/403.html",
+      "page404": "/404.html",
+      "page500": "/500.html"
     }
   ],
   "forbidden_type": [
@@ -25,6 +24,8 @@
       "/.."
     ],
   "mapper" : {
+    "/Hello": "Hello",
+    "/service.Hello": "service.Hello",
     "/Greeting": "Hello",
     "/super.Greeting": "service.Hello"
   }
