--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,14 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.12.4</version>
+                <configuration>
+                    <skipTests>false</skipTests>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -76,6 +84,8 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.11.3</version>
         </dependency>
+
+
 <!--        <dependency>-->
 <!--            <groupId>org.json</groupId>-->
 <!--            <artifactId>json</artifactId>-->
